Fix auth.
